[package]
name = "schedule"
version = "0.1.0"
authors = ["Max Levine <max@maxlevine.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.1", features = ["yaml"]}
chrono = "0.4"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"